--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@
 .display{
     display: none;
 }
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 800px;
+    gap: 20px;
+}
